--- a/frontend/home-delivery/src/app/auth/register/register.html
+++ b/frontend/home-delivery/src/app/auth/register/register.html
@@ -1,63 +1,90 @@
+<div class="container">
 
- <div class="container">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                    <div class="col-lg-7">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="col-lg-7">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                        </div>
+                        <form [formGroup]="form" (ngSubmit)="submit()" class="user">
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="text" matInput formControlName="firstName"
+                                        class="form-control form-control-user" id="exampleFirstName"
+                                        placeholder="First Name">
+                                    @if (form.controls['firstName'].touched &&
+                                    form.controls['firstName'].errors?.['required'])
+                                    {
+                                    <mat-error class="text-danger">First name is required</mat-error>
+                                    }
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="text" matInput formControlName="lastName"
+                                        class="form-control form-control-user" id="exampleLastName"
+                                        placeholder="Last Name">
+                                           @if (form.controls['lastName'].touched &&
+                                    form.controls['lastName'].errors?.['required'])
+                                    {
+                                    <mat-error class="text-danger">Last name is required</mat-error>
+                                    }
+                                </div>
                             </div>
-                            <form class="user">
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Last Name">
-                                    </div>
+                            <div class="form-group">
+                                <input type="email" matInput formControlName="email"
+                                    class="form-control form-control-user" id="exampleInputEmail"
+                                    placeholder="Email Address">
+                                           @if (form.controls['email'].touched &&
+                                    form.controls['email'].errors?.['required'])
+                                    {
+                                    <mat-error class="text-danger">Email is required</mat-error>
+                                    }
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="password" matInput formControlName="password"
+                                        class="form-control form-control-user" id="exampleInputPassword"
+                                        placeholder="Password">
+                                               @if (form.controls['password'].touched &&
+                                    form.controls['password'].errors?.['required'])
+                                    {
+                                    <mat-error class="text-danger">Password is required</mat-error>
+                                    }
                                 </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Email Address">
+                                <div class="col-sm-6">
+                                    <input type="password" matInput formControlName="confurmPassword"
+                                        class="form-control form-control-user" id="exampleRepeatPassword"
+                                        placeholder="Repeat Password">
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Repeat Password">
-                                    </div>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </button>
-<!--                                 <hr>
+                            </div>
+                            @if (form.errors?.['passwordMismatch']) {
+                              <mat-error class="text-danger">Password Mismatch</mat-error>
+                            }
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                Register Account
+                            </button>
+                            <!--                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
                                 </a>
                                 <a href="index.html" class="btn btn-facebook btn-user btn-block">
                                     <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
                                 </a> -->
-                            </form>
-                            <hr>
-                            <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
-                            </div>
-                            <div class="text-center">
-                                <a class="small" [routerLink]="['/auth/login']">Already have an account? Login!</a>
-                            </div>
+                        </form>
+                        <hr>
+                        <div class="text-center">
+                            <a class="small" href="forgot-password.html">Forgot Password?</a>
+                        </div>
+                        <div class="text-center">
+                            <a class="small" [routerLink]="['/auth/login']">Already have an account? Login!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+
+</div>
