--- a/frontend/home-delivery/src/app/auth/header/header.css
+++ b/frontend/home-delivery/src/app/auth/header/header.css
@@ -3,10 +3,33 @@
     align-items: center;
     justify-content: space-between;
     gap:12px;
-    padding: 10px;
+    padding: .9rem;
     margin: 0 auto;
     border-bottom: 1px solid #000;
 }
+
+.cart-icon{
+  position: relative;
+}
+.badge-cart {
+    background: red;
+    color: white;
+    position: absolute;
+    display: inline-block;
+    padding: 2px;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    top: 8px;
+    right: 0px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
+}
+
 .pointer{
   cursor: pointer;
 }
