--- a/frontend/home-delivery/src/app/auth/home/home.html
+++ b/frontend/home-delivery/src/app/auth/home/home.html
@@ -1,5 +1,5 @@
-<app-header/>
-
+<app-header />
+<app-cart-drawer></app-cart-drawer>
 <div>
     <ul class="menu">
         <li *ngFor="let item of menuItems; let i = index" class="menu-item" [class.active]="i === activeIndex"
@@ -12,198 +12,7 @@
 
     <div class="container py-2">
         <div class="row">
-            <div [routerLink]="['/auth/product-details']" class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-             <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-             <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-             <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-             <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-             <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
+            @for(item of items; track $index){
             <div class="card product-card mb-2">
                 <div class="row no-gutters align-items-center">
 
@@ -215,18 +24,20 @@
                     <!-- Product Info -->
                     <div class="col-8 col-md-9">
                         <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
+                            <h6 class="card-title mb-1">{{item.name}}</h6>
 
                             <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
+                                {{item.description}}
                             </p>
 
                             <div class="d-flex justify-content-between align-items-center">
                                 <span class="text-success font-weight-bold">
-                                    ৳ 250
+                                    ৳  {{item.price}}
                                 </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
+                                <button [routerLink]="['/auth/product-details']" class="btn btn-sm btn-primary">
+                                    Open
+                                </button>
+                                <button (click)="addToCart(item)" class="btn btn-sm btn-outline-success">
                                     Add
                                 </button>
                             </div>
@@ -235,231 +46,10 @@
 
                 </div>
             </div>
-
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
+            }
 
 
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
 
 
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="card product-card mb-2">
-                <div class="row no-gutters align-items-center">
-
-                    <!-- Product Image -->
-                    <div class="col-4 col-md-3">
-                        <img src="https://placehold.co/600x400" class="img-fluid product-img" alt="Product">
-                    </div>
-
-                    <!-- Product Info -->
-                    <div class="col-8 col-md-9">
-                        <div class="card-body py-2">
-                            <h6 class="card-title mb-1">Chicken Burger</h6>
-
-                            <p class="text-muted small mb-1">
-                                Juicy grilled chicken with cheese
-                            </p>
-
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span class="text-success font-weight-bold">
-                                    ৳ 250
-                                </span>
-
-                                <button class="btn btn-sm btn-outline-primary">
-                                    Add
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
         </div>
     </div>
