--- a/frontend/home-delivery/src/app/auth/header/header.html
+++ b/frontend/home-delivery/src/app/auth/header/header.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div>
-            <h2 class="pointer"><i class="fa fa-user-circle"></i></h2>
+            <h2 class="pointer" [routerLink]="['/auth/login']"><i class="fa fa-user-circle"></i></h2>
         </div>
         <div>
             <h2 (click)="openCart()" class="pointer cart-icon"><i class="fa fa-shopping-cart"></i>
