--- a/frontend/home-delivery/src/app/shared/layouts/main-layout/main-layout.html
+++ b/frontend/home-delivery/src/app/shared/layouts/main-layout/main-layout.html
@@ -209,7 +209,7 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content -->
-            <div class="container-fluid">
+            <div class="container-fluid scrollable-content">
                 <router-outlet></router-outlet>
             </div>
             <!-- /.container-fluid -->
