--- a/frontend/home-delivery/public/css/styles.css
+++ b/frontend/home-delivery/public/css/styles.css
@@ -102,7 +102,15 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  height: 100%;
+  overflow-y: hidden;
 }
+
+.scrollable-content{
+  overflow-y: auto;
+   height: calc(100vh - 165px);
+}
+
 
 hr {
   margin: 1rem 0;
