--- a/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
+++ b/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
@@ -93,7 +93,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" [routerLink]="['/customer/your-cart']">
             <i class="fas fa-fw fa-shopping-cart"></i>
             <span>Cart</span></a>
     </li>
