--- a/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
+++ b/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
@@ -138,7 +138,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" [routerLink]="['/delivery/navigation']">
             <i class="fas fa-fw fa-map-marker"></i>
             <span>Navigation</span></a>
     </li>
