--- a/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
+++ b/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
@@ -56,7 +56,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" [routerLink]="['/admin/user-list']">
             <i class="fas fa-fw fa-user"></i>
             <span>Users & Roles</span></a>
     </li>
